refactor: CartResponse의 필드 변경